@@ -118,9 +118,13 @@ worker (int iterations)
               // to avoid race conditions for suspend() and resume().
               if (thr_mgr->testcancel (ACE_Thread::self ()) != 0)
                 {
+                  char thr_id[BUFSIZ];
+                  // Test out the ACE_OS::thr_id() method.
+                  ACE_OS::thr_id (thr_id, sizeof thr_id);
                   ACE_DEBUG ((LM_DEBUG,
-                              ACE_TEXT ("(%t) has been cancelled ")
+                              ACE_TEXT ("(%s) has been cancelled ")
                               ACE_TEXT ("before iteration %d!\n"),
+                              thr_id,
                               i));
                   break;
                 }
@@ -130,7 +134,7 @@ worker (int iterations)
             {
               char thr_id[BUFSIZ];
               // Test out the ACE_OS::thr_id() method.
-              ssize_t len = ACE_OS::thr_id (thr_id, sizeof thr_id);
+              ACE_OS::thr_id (thr_id, sizeof thr_id);
               ACE_DEBUG ((LM_DEBUG,
                           ACE_TEXT ("(%s) has been cancelled ")
                           ACE_TEXT ("before iteration %d!\n"),
