@@ -1,3 +1,8 @@
+Thu May  9 14:05:28 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * tests/Thread_Manager_Test.cpp (worker): Removed unused "len"
+          variable to fix a warning.  Thanks to Johnny for reporting this.
+
 Wed May  8 19:04:22 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * ace/OS_NS_Thread.inl (ACE_OS::thr_id): Fixed a warning on
